// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`group-panel Renders \`group-panel\` with custom props 1`] = `
<li
  class="v-expansion-panel__container secondary group-item editing"
  isgroupsorderchanged="true"
  tabindex="0"
>
  <div
    class="v-expansion-panel__header"
  >
    <div
      class="panel-header"
    >
      <span>
        Custom group title
      </span>
      <button
        class="v-btn v-btn--disabled v-btn--icon v-btn--depressed v-btn--small theme--light"
        disabled="disabled"
        type="button"
      >
        <div
          class="v-btn__content"
        >
          <i
            aria-hidden="true"
            class="v-icon notranslate material-icons theme--light"
            style="font-size: 16px;"
          >
            edit
          </i>
        </div>
      </button>
    </div>
  </div>
  <transition-stub
    mode="in-out"
    name="expand-transition"
  >
    <div
      class="v-expansion-panel__body"
      style="display: none;"
    >
      <div
        class="default-slot"
      />
    </div>
  </transition-stub>
</li>
`;

exports[`group-panel Renders \`group-panel\` with required props 1`] = `
<li
  class="v-expansion-panel__container secondary group-item"
  tabindex="0"
>
  <div
    class="v-expansion-panel__header"
  >
    <div
      class="panel-header"
    >
      <span>
        Group title
      </span>
      <button
        class="v-btn v-btn--icon v-btn--depressed v-btn--small theme--light"
        style="display: none;"
        type="button"
      >
        <div
          class="v-btn__content"
        >
          <i
            aria-hidden="true"
            class="v-icon notranslate material-icons theme--light"
            style="font-size: 16px;"
          >
            edit
          </i>
        </div>
      </button>
    </div>
    <transition-stub
      name="fade-transition"
    >
      <div
        class="v-expansion-panel__header__icon"
      >
        <i
          aria-hidden="true"
          class="v-icon notranslate material-icons theme--light"
        >
          keyboard_arrow_down
        </i>
      </div>
    </transition-stub>
  </div>
  <transition-stub
    mode="in-out"
    name="expand-transition"
  >
    <div
      class="v-expansion-panel__body"
      style="display: none;"
    />
  </transition-stub>
</li>
`;
